--- a/test/sample/index.html
+++ b/test/sample/index.html
@@ -16,9 +16,9 @@
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <h3 class="text-muted">app</h3>
             </div>
@@ -38,7 +38,7 @@
                     <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
                 </div>
             </div>
-            
+
             <script src="scripts/main.js"></script>
 
             <div class="footer">
