Add support for parsing image refs

--- a/test/sample/index.html
+++ b/test/sample/index.html
@@ -38,6 +38,12 @@
                     <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
                 </div>
             </div>
+
+            <div class="row">
+                <img src="http://placekitten.com/200/300">
+                <img src="http://placekitten.com/300/400">
+                <img src="http://placekitten.com/500/600">
+            </div>
             
             <script src="scripts/main.js"></script>
 
