- Filter by “absolute” or “relative” URLs - Optionally specify your desired CLI output delimiter - Update to README for new options

--- a/test/sample/index.html
+++ b/test/sample/index.html
@@ -6,6 +6,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="styles/main.css">
     </head>
@@ -44,7 +47,7 @@
                 <img src="http://placekitten.com/300/400">
                 <img src="http://placekitten.com/500/600">
             </div>
-            
+
             <script src="scripts/main.js"></script>
 
             <div class="footer">
