--- a/test/sample/index.html
+++ b/test/sample/index.html
@@ -8,6 +8,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="preload" href="styles/preload.css" as="style">
     </head>
     <body>
         <!--[if lt IE 10]>
