--- a/test/fixtures/mixed.html
+++ b/test/fixtures/mixed.html
@@ -1,4 +1,4 @@
 <style>body {padding:0}</style>
-<link rel="stylesheet preload" href="assets/css/bootstrap.css" as="style" />
+<link rel="stylesheet preload" href="assets/css/bootstrap.css" as="style">
 <style>h1 {font-size: 5rem}</style>
 <link rel="stylesheet" href="styles/main.css">
