--- a/test/fixtures/preload-stylesheet.html
+++ b/test/fixtures/preload-stylesheet.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet preload" href="assets/css/bootstrap.css" as="style" />
+<link rel="stylesheet preload" href="assets/css/bootstrap.css" as="style">
