--- a/test/fixtures/sample/index.html
+++ b/test/fixtures/sample/index.html
@@ -1,57 +1,60 @@
 <!doctype html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <title>app</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="preload" href="styles/preload.css" as="style">
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="container">
-            <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">app</h3>
-            </div>
 
-            <div class="jumbotron">
-                <h1>'Allo, 'Allo!</h1>
-                <p class="lead">Always a pleasure scaffolding your apps.</p>
-                <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <title>app</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="preload" href="styles/preload.css" as="style">
+</head>
 
-            <div class="row marketing">
-                <div class="col-lg-6">
-                    <h4>HTML5 Boilerplate</h4>
-                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
+<body>
+  <!--[if lt IE 10]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+  <div class="container">
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <h3 class="text-muted">app</h3>
+    </div>
 
-                    <h4>Bootstrap</h4>
-                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-                </div>
-            </div>
+    <div class="jumbotron">
+      <h1>'Allo, 'Allo!</h1>
+      <p class="lead">Always a pleasure scaffolding your apps.</p>
+      <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
+    </div>
 
-            <div class="row">
-                <img src="http://placekitten.com/200/300">
-                <img src="http://placekitten.com/300/400">
-                <img src="http://placekitten.com/500/600">
-            </div>
-            
-            <script src="scripts/main.js"></script>
+    <div class="row marketing">
+      <div class="col-lg-6">
+        <h4>HTML5 Boilerplate</h4>
+        <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
 
-            <div class="footer">
-                <p>♥ from the Yeoman team</p>
-            </div>
-        </div>
+        <h4>Bootstrap</h4>
+        <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <img src="http://placekitten.com/200/300">
+      <img src="http://placekitten.com/300/400">
+      <img src="http://placekitten.com/500/600">
+    </div>
+
+    <script src="scripts/main.js"></script>
+
+    <div class="footer">
+      <p>♥ from the Yeoman team</p>
+    </div>
+  </div>
 
 </body>
+
 </html>
